--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 elasticsearch:
   image: "elasticsearch:1.7.3"
   ports:
@@ -11,19 +10,6 @@ elasticsearch:
   command: "-Des.network.host=0.0.0.0"
   restart: always
 
-bro:
-  image: "bro:elastic"
-  command: "-r /pcap/heartbleed.pcap local"
-  links:
-    - "elasticsearch:elasticsearch"
-# logstash:
-#   image: "logstash:latest"
-#   ports:
-#     - "5000:5000"
-#   volumes:
-#     - "$PWD:/config-dir"
-#   command: logstash -f /config-dir/logstash.conf
-
 kibana:
   image: "kibana:4.1.2"
   ports:
@@ -31,6 +17,22 @@ kibana:
   links:
     - "elasticsearch:elasticsearch"
   restart: always
+
+bro:
+  image: "blacktop/bro:elastic"
+  command: "-r /pcap/my_capture.pcap /scripts/extract-all.bro local" #"Site::local_nets += { 192.168.99.0/24 }"
+  links:
+    - "elasticsearch:elasticsearch"
+  volumes:
+    - "./my_capture.pcap:/pcap/my_capture.pcap:rw"
+
+# logstash:
+#   image: "logstash:latest"
+#   ports:
+#     - "5000:5000"
+#   volumes:
+#     - "$PWD:/config-dir"
+#   command: logstash -f /config-dir/logstash.conf
 
 # nginx:
 #     build: .
