--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,19 @@
+bro:
+  image: "blacktop/bro:elastic"
+  command: -r /pcap/my_capture.pcap /scripts/extract-files.bro /scripts/conn-add-geodata.bro local #"Site::local_nets += { 192.168.99.0/24 }"
+  links:
+    - "elasticsearch:elasticsearch"
+  volumes:
+    - "./my_capture.pcap:/pcap/my_capture.pcap:rw"
+
+kibana:
+  image: "kibana:4.1.2"
+  ports:
+    - "80:5601"
+  links:
+    - "elasticsearch:elasticsearch"
+  restart: always
+
 elasticsearch:
   image: "elasticsearch:1.7.3"
   ports:
@@ -9,23 +25,6 @@ elasticsearch:
   #   - "$PWD/config:/usr/share/elasticsearch/config"
   command: "-Des.network.host=0.0.0.0"
   restart: always
-
-kibana:
-  image: "kibana:4.1.2"
-  ports:
-    - "80:5601"
-  links:
-    - "elasticsearch:elasticsearch"
-  restart: always
-
-bro:
-  image: "blacktop/bro:elastic"
-  command: "-r /pcap/my_capture.pcap /scripts/extract-all.bro local" #"Site::local_nets += { 192.168.99.0/24 }"
-  links:
-    - "elasticsearch:elasticsearch"
-  volumes:
-    - "./my_capture.pcap:/pcap/my_capture.pcap:rw"
-
 # logstash:
 #   image: "logstash:latest"
 #   ports:
