--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,13 @@
 # Ignore .git folder
 .git*
 
+build
 extract_files
 CHANGELOG.md
 LICENSE
 Makefile
 README.md
+README.md.bu
 VERSION
 circle.yml
 docker-compose.yml
