--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
 
 test:
   override:
-    - /bin/true
+    - docker run bro:$(cat VERSION) -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
 
 deployment:
   # master:
