--- a/circle.yml
+++ b/circle.yml
@@ -6,12 +6,13 @@ general:
   build_dir: "latest"
 
 dependencies:
-  pre:
-    - make circleci
+  cache_directories:
+    - "~/docker"
   override:
-    - make build
-  post:
-    - cp build/* $CIRCLE_ARTIFACTS
+    - docker info
+    - if [[ -e ~/docker/image.tar ]]; then docker load --input ~/docker/image.tar; fi
+    - docker build -t blacktop_bro .
+    - mkdir -p ~/docker; docker save blacktop_bro > ~/docker/image.tar
 
 test:
   override:
