--- a/2.4/Makefile
+++ b/2.4/Makefile
@@ -12,7 +12,7 @@ tags:
 build:
 	rm -rf build && mkdir build
 	docker build -t $(NAME):$(VERSION) .
-	sed -i.bu 's/docker image-.*-blue/docker image-$(shell docker images --format "{{.Size}}" $(NAME):$(VERSION))-blue/g' README.md
+	sed -i.bu 's/docker image-.*-blue/docker image-$(shell docker images --format "{{.Size}}" $(NAME):$(VERSION))-blue/g' ../README.md
 	docker save $(NAME):$(VERSION) | gzip -9 > build/$(NAME)_$(VERSION).tgz
 
 release:
