moving to alpine

--- a/2.4/Dockerfile
+++ b/2.4/Dockerfile
@@ -1,58 +1,62 @@
-FROM debian:wheezy
+FROM gliderlabs/alpine:3.4
 
 MAINTAINER blacktop, https://github.com/blacktop
 
-ENV TINI_VERSION v0.9.0
-ENV TINI_URL github.com/krallin/tini/releases/download
+ENV BRO_VERSION v2.4.1
 
-# Install Bro Required Dependencies
-RUN set -x \
-  && echo "[INFO] Installing Dependancies =========================================================" \
-  && apt-get -qq update \
-  && apt-get install -yq ca-certificates curl unzip --no-install-recommends \
-  && echo "Grab tini for signal processing and zombie killing =====================================" \
-  && curl -sL "https://$TINI_URL/$TINI_VERSION/tini" > /usr/local/bin/tini \
-  && curl -sL "https://$TINI_URL/$TINI_VERSION/tini.asc" > /usr/local/bin/tini.asc \
-  && export GNUPGHOME="$(mktemp -d)" \
-  && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 6380DC428747F6C393FEACA59A84159D7001A4E5 \
-  && gpg --batch --verify /usr/local/bin/tini.asc /usr/local/bin/tini \
-  && rm -r "$GNUPGHOME" /usr/local/bin/tini.asc \
-  && chmod +x /usr/local/bin/tini \
-  && tini -h \
-  && echo "[INFO] Installing Bro-IDS ==============================================================" \
-  && curl -sL http://download.opensuse.org/repositories/network:bro/Debian_8.0/Release.key \
-    | apt-key add - \
-  && echo 'deb http://download.opensuse.org/repositories/network:/bro/Debian_7.0/ /' \
-    >> /etc/apt/sources.list.d/bro.list \
-  && apt-get update \
-  && apt-get install -y bro \
-  && echo "[INFO] Add Extras ======================================================================" \
-  && curl -sL https://github.com/blacktop/docker-bro/archive/master.zip > /tmp/bro.zip \
+COPY patches /tmp
+RUN apk-install zlib openssl libstdc++ libpcap geoip libgcc tini
+RUN apk-install -t .build-deps linux-headers \
+                                openssl-dev \
+                                libpcap-dev \
+                                python-dev \
+                                geoip-dev \
+                                zlib-dev \
+                                binutils \
+                                fts-dev \
+                                cmake \
+                                clang \
+                                bison \
+                                perl \
+                                make \
+                                flex \
+                                git \
+                                g++ \
+                                fts \
+  && set -x \
   && cd /tmp \
-  && unzip bro.zip \
-  && cd docker-bro-master \
-  && echo "[INFO] Add Scripts..." \
-  && mv scripts /scripts \
-  && echo "[INFO] Add GeoIPLite Database..." \
-  && mv geoip /usr/share/GeoIP/ \
-  && gunzip /usr/share/GeoIP/GeoLiteCity.dat.gz \
-  && rm -f /usr/share/GeoIP/GeoLiteCity.dat.gz \
-  && ln -s /usr/share/GeoIP/GeoLiteCity.dat /usr/share/GeoIP/GeoIPCity.dat \
-  && echo "[INFO] Cleaning image to reduce size ===================================================" \
-  && apt-get purge -y ca-certificates curl unzip \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  && git clone --recursive --branch $BRO_VERSION git://git.bro.org/bro \
+  && echo "===> Applying patches..." \
+  && cd /tmp/bro \
+  && patch -p1 < /tmp/bro-musl.patch \
+  && cp /tmp/FindFTS.cmake cmake \
+  && cd /tmp/bro/aux/binpac \
+  && patch -p1 < /tmp/binpac-musl.patch \
+  && echo "===> Compiling bro..." \
+  && cd /tmp/bro \
+  && CC=clang ./configure --disable-broker \
+                          --disable-broctl --disable-broccoli \
+                          --disable-auxtools --prefix=/usr/local \
+  && make \
+  && make install \
+  && echo "===> Compiling af_packet plugin..." \
+  && cd /tmp/bro/aux/plugins/af_packet \
+  && make distclean \
+  && CC=clang ./configure --with-kernel=/usr \
+  && make \
+  && make install \
+  && echo "===> Shrinking image..." \
+  && strip -s /usr/local/bin/bro \
+  && rm -rf /tmp/* \
+  && apk del --purge .build-deps
 
-ENV PATH /opt/bro/bin:$PATH
+ENV BROPATH .:/data/config:/usr/local/share/bro:/usr/local/share/bro/policy:/usr/local/share/bro/site
 
-# Add PCAP Test Folder
-ADD https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap /pcap/
 VOLUME ["/pcap"]
 WORKDIR /pcap
 
-# Add local.bro
-COPY local.bro /opt/bro/share/bro/site/local.bro
+COPY local.bro /usr/local/share/bro/site/local.bro
 
-ENTRYPOINT ["tini","--","bro"]
+ENTRYPOINT ["/sbin/tini","--","bro"]
 
-CMD ["-h"]
+CMD [ "-h" ]
