--- a/latest/Makefile
+++ b/latest/Makefile
@@ -3,17 +3,17 @@ VERSION=$(shell cat VERSION)
 DEV_RUN_OPTS ?= -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
 
 dev:
-	docker build -f Dockerfile.dev -t $(NAME):dev .
+	docker build -f Dockerfile -t $(NAME):dev .
 	docker run --rm $(NAME):dev $(DEV_RUN_OPTS)
 
 tags:
 	docker images --format "table {{.Repository}}\t{{.Tag}}\t{{.Size}}" blacktop/$(NAME)
 
 build:
-	rm -rf build && mkdir build
 	docker build -t $(NAME):$(VERSION) .
+
+size:
 	sed -i.bu 's/docker image-.*-blue/docker image-$(shell docker images --format "{{.Size}}" $(NAME):$(VERSION))-blue/g' ../README.md
-	docker save $(NAME):$(VERSION) | gzip -9 > build/$(NAME)_$(VERSION).tgz
 
 release:
 	rm -rf release && mkdir release
