--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
 
 test:
   override:
-    - docker run bro:$(cat VERSION)
+    - docker run bro:$(cat VERSION) --version
 
 deployment:
   # master:
