--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -1,4 +1,4 @@
-FROM gliderlabs/alpine:edge
+FROM gliderlabs/alpine:3.4
 
 MAINTAINER blacktop, https://github.com/blacktop
 
@@ -6,25 +6,26 @@ ENV BRO_VERSION v2.5
 
 COPY patches /tmp
 RUN apk-install zlib openssl libstdc++ libpcap geoip libgcc tini
-RUN apk-install -t .build-deps librdkafka-dev \
-                               linux-headers \
-                               openssl-dev \
-                               libpcap-dev \
-                               python-dev \
-                               geoip-dev \
-                               zlib-dev \
-                               binutils \
-                               fts-dev \
-                               cmake \
-                               clang \
-                               bison \
-                               perl \
-                               make \
-                               flex \
-                               curl \
-                               git \
-                               g++ \
-                               fts \
+RUN echo http://nl.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories \
+  && apk-install -t .build-deps linux-headers \
+                                openssl-dev \
+                                libpcap-dev \
+                                python-dev \
+                                geoip-dev \
+                                libssl1.0 \
+                                zlib-dev \
+                                binutils \
+                                fts-dev \
+                                cmake \
+                                clang \
+                                bison \
+                                perl \
+                                make \
+                                flex \
+                                curl \
+                                git \
+                                g++ \
+                                fts \
   && set -x \
   && cd /tmp \
   && git clone --recursive --branch $BRO_VERSION git://git.bro.org/bro \
@@ -48,6 +49,7 @@ RUN apk-install -t .build-deps librdkafka-dev \
   && make \
   && make install \
   && echo "===> Compiling kafka plugin..." \
+  && apk-install librdkafka-dev \
   && cd /tmp/bro/aux/plugins/kafka \
   && CC=clang ./configure --bro-dist=/tmp/bro \
   && make \
