--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -78,6 +78,9 @@ ENV BROPATH .:/data/config:/usr/local/share/bro:/usr/local/share/bro/policy:/usr
 VOLUME ["/pcap"]
 WORKDIR /pcap
 
+ADD https://github.com/blacktop/docker-bro/raw/master/scripts/conn-add-geodata.bro \
+    /usr/local/share/bro/geodata/conn-add-geodata.bro
+
 COPY local.bro /usr/local/share/bro/site/local.bro
 COPY template.json /template.json
 COPY entrypoint.sh /entrypoint.sh
