--- a/2.5/Dockerfile
+++ b/2.5/Dockerfile
@@ -51,10 +51,12 @@ RUN apk-install -t .build-deps linux-headers \
   && apk del --purge .build-deps
 
 # Install the GeoIPLite Database
-RUN mkdir -p /usr/share/GeoIP/ \
+RUN apk-install curl \
+  && mkdir -p /usr/share/GeoIP/ \
   && GEOIP=geolite.maxmind.com/download/geoip/database \
   && curl -s http://${GEOIP}/GeoLiteCity.dat.gz | zcat > /usr/share/GeoIP/GeoIPCity.dat \
-  && curl -s http://${GEOIP6}/GeoLiteCityv6-beta/GeoLiteCityv6.dat.gz | zcat > /usr/share/GeoIP/GeoIPCityv6.dat
+  && curl -s http://${GEOIP6}/GeoLiteCityv6-beta/GeoLiteCityv6.dat.gz | zcat > /usr/share/GeoIP/GeoIPCityv6.dat \
+  && apk del --purge curl
 
 ENV BROPATH .:/data/config:/usr/local/share/bro:/usr/local/share/bro/policy:/usr/local/share/bro/site
 
