pull geoip db into it's own tag

--- a/geoip/Dockerfile
+++ b/geoip/Dockerfile
@@ -50,6 +50,14 @@ RUN apk-install -t .build-deps linux-headers \
   && rm -rf /tmp/* \
   && apk del --purge .build-deps
 
+# Install the GeoIPLite Database
+RUN apk-install curl \
+  && mkdir -p /usr/share/GeoIP/ \
+  && GEOIP=geolite.maxmind.com/download/geoip/database \
+  && curl -s http://${GEOIP}/GeoLiteCity.dat.gz | zcat > /usr/share/GeoIP/GeoIPCity.dat \
+  && curl -s http://${GEOIP}/GeoLiteCityv6-beta/GeoLiteCityv6.dat.gz | zcat > /usr/share/GeoIP/GeoIPCityv6.dat \
+  && apk del --purge curl
+
 ENV BROPATH .:/data/config:/usr/local/share/bro:/usr/local/share/bro/policy:/usr/local/share/bro/site
 
 VOLUME ["/pcap"]
