--- a/geoip/Dockerfile
+++ b/geoip/Dockerfile
@@ -1,6 +1,6 @@
 FROM gliderlabs/alpine:3.4
 
-MAINTAINER blacktop, https://github.com/blacktop
+LABEL maintainer "https://github.com/blacktop"
 
 ENV BRO_VERSION v2.5
 
