--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,10 @@ dependencies:
 
 test:
   override:
+    - docker images bro:$(cat VERSION)
     - docker run bro:$(cat VERSION) --version
+    - wget https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap
+    - docker run --rm -v `pwd`:/pcap $(REPO)/$(NAME):$(BUILD) -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
 
 deployment:
   # master:
