--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
 
 test:
   override:
-    - docker images bro:$(cat VERSION)
+    - docker images bro
     - docker run bro:$(cat VERSION) --version
     - wget https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap
     - docker run --rm -v `pwd`:/pcap bro:$(cat VERSION) -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
