might not need to update first?

--- a/2.5/Dockerfile
+++ b/2.5/Dockerfile
@@ -5,24 +5,25 @@ LABEL maintainer "https://github.com/blacktop"
 ENV BRO_VERSION v2.5
 
 COPY patches /tmp
-RUN apk --update add --no-cache zlib openssl libstdc++ libpcap geoip libgcc tini
-RUN apk --update add --no-cache -t .build-deps linux-headers \
-                                    openssl-dev \
-                                    libpcap-dev \
-                                    python-dev \
-                                    geoip-dev \
-                                    zlib-dev \
-                                    binutils \
-                                    fts-dev \
-                                    cmake \
-                                    clang \
-                                    bison \
-                                    perl \
-                                    make \
-                                    flex \
-                                    git \
-                                    g++ \
-                                    fts \
+RUN apk add --no-cache zlib openssl libstdc++ libpcap geoip libgcc tini
+RUN apk add --no-cache -t .build-deps \
+                          linux-headers \
+                          openssl-dev \
+                          libpcap-dev \
+                          python-dev \
+                          geoip-dev \
+                          zlib-dev \
+                          binutils \
+                          fts-dev \
+                          cmake \
+                          clang \
+                          bison \
+                          perl \
+                          make \
+                          flex \
+                          git \
+                          g++ \
+                          fts \
   && cd /tmp \
   && git clone --recursive --branch $BRO_VERSION git://git.bro.org/bro \
   && echo "===> Applying patches..." \
