--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,7 +4,7 @@ services:
   #   image: blacktop/elasticsearch
   bro:
     build:
-      context: .
+      context: ./2.5
     image: malice/bro
     volumes:
       - ./pcap:/pcap
