--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -3,9 +3,7 @@ services:
   # elasticsearch:
   #   image: blacktop/elasticsearch
   bro:
-    build:
-      context: ./2.5
-    image: malice/bro
+    image: app
     volumes:
       - ./pcap:/pcap
     command: -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
