--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ jobs:
       - run:
           name: Run tests
           command: |
-            wget https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap -P pcap
+            set -x
+            curl -L -o pcap/heartbleed.pcap https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap
             docker-compose -f docker-compose.ci.yml up
       # - deploy:
       #     name: Push application Docker image
