--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,7 +5,8 @@ services:
   bro:
     image: app
     volumes:
-      - .:/pcap
+      - ./pcap:/pcap
+      - ./scripts/local.bro:/usr/local/share/bro/site/local.bro
     command: -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
 
 # docker run -v `pwd`:/pcap bro:$(cat VERSION) -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
