--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,8 @@ jobs:
           name: Run tests
           command: |
             set -x
+            ls -lah pcap
+            ls -lah scripts
             docker-compose -f docker-compose.ci.yml up
             cat pcap/notice.log | awk '{ print $11 }' | tail -n4
       # - deploy:
