--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,8 @@ jobs:
             set -x
             ls -lah pcap
             ls -lah scripts
-            docker-compose -f docker-compose.ci.yml up
+            docker run --rm $(REPO)/$(NAME):$(BUILD) --version
+            docker run --rm -v `pwd`/pcap:/pcap -v `pwd`/scripts/local.bro:/usr/local/share/bro/site/local.bro app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
             cat pcap/notice.log | awk '{ print $11 }' | tail -n4
       # - deploy:
       #     name: Push application Docker image
@@ -73,5 +74,3 @@ jobs:
       #         docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
       #         docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
       #       fi
-
-            # curl -L -o heartbleed.pcap https://github.com/blacktop/docker-bro/raw/master/pcap/heartbleed.pcap
