--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
             set -x
             ls -lah pcap
             ls -lah scripts
-            docker run --rm $(REPO)/$(NAME):$(BUILD) --version
+            docker run --rm app --version
             docker run --rm -v `pwd`/pcap:/pcap -v `pwd`/scripts/local.bro:/usr/local/share/bro/site/local.bro app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
             cat pcap/notice.log | awk '{ print $11 }' | tail -n4
       # - deploy:
