--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
             ls -lah pcap
             ls -lah scripts
             docker run --rm app --version
-            docker run --rm -v /app/pcap:/pcap -v /app/scripts/local.bro:/usr/local/share/bro/site app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
+            docker run --rm -v /app/pcap:/pcap/ -v /app/scripts/local.bro:/usr/local/share/bro/site/ app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
             cat pcap/notice.log | awk '{ print $11 }' | tail -n4
       # - deploy:
       #     name: Push application Docker image
