--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,11 +60,12 @@ jobs:
           name: Run tests
           command: |
             set -x
-            pwd
-            ls -lah pcap
-            ls -lah scripts
+            docker create -v /scripts --name scripts alpine:3.6 /bin/true
+            docker cp scripts/local.bro scripts:/scripts
+            docker create -v /pcap --name pcap alpine:3.6 /bin/true
+            docker cp pcap/heartbleed.pcap pcap:/pcap
             docker run --rm app --version
-            docker run --rm -v /app/pcap:/pcap/ -v /app/scripts/local.bro:/usr/local/share/bro/site/ app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
+            docker run --rm --volumes-from scripts --volumes-from pcap app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
             cat pcap/notice.log | awk '{ print $11 }' | tail -n4
       # - deploy:
       #     name: Push application Docker image
